# principle-induction

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  TODO.md  dev-requirements.txt  pyproject.toml  requirements.txt  todo_after.md
.github/workflows/: ci.yml
configs/: rl_eca.yaml  rl_life.yaml
datasets/: __init__.py  eca.py  life.py
docs/: algorithms.md  configs.md  getting-started.md  index.md  troubleshooting.md
legacy/: dna_ca.py  eca.py  gameoflife.py  simple.py  wavefn.py
models/: mini_transformer.py
rl/: __init__.py  prompts.py
rl/algo/: __init__.py  grpo.py  gspo.py
rl/envs/: __init__.py  base.py  eca_param_env.py  eca_rollout_env.py  life_param_env.py  spaces.py
scripts/: demo_rl_envs.py  experiment_eca.py  infer_ca_rollout.py  quick_probe.py  run_from_config.py  run_grpo_env.py  sft_lora_hf.py  sft_prompt_embed.py  sft_prompt_hf.py  sft_softprompt.py  text_utils.py  train_baseline.py
tests/: conftest.py  test_envs.py  test_gspo.py  test_prompts.py  test_tools_eca.py  test_tools_life.py
tools/: __init__.py  eca.py  life.py
